small partial updates

--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,5 +1,5 @@
 <header>
-    <span><a href="/">Restaurant</a></span>
+    <span><a href="/">Match App</a></span>
     <ul>
         <li><a href="/restaurants">Restaurants</a></li>
         <li><a href="/matches">Matches</a></li>
