added bodyParser to get form input

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,1 +1,19 @@
 <h1>Register</h1>
+
+<form action="/register/success" method="POST">
+    <label for="name">
+        Name:
+        <input type="text" name="name" placeholder="Fill in your name...">
+    </label>
+    <label for="email">
+        Email:
+        <input type="email" name="email" placeholder="Fill in your email...">
+    </label>
+    <label for="school">
+        School:
+        <input type="text" name="school" placeholder="Fill in your school...">
+    </label>
+    <button type="submit">
+        Register
+    </button>
+</form>
