--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -1,20 +1,51 @@
 header{
+    position: fixed;
+    bottom:0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 60px;
-    padding: 20px 40px;
-    background-color: $app-color; 
+    height: $footer-height;
+    padding: 10px 20px;
+    background-color: $header-color;
+    box-shadow: 0px 0px 2px black; 
 
     ul {
         display: flex;
+        justify-content: space-evenly;
+        width: inherit;
         gap: 0.5em;
 
         li {
+            position: relative;
             padding: 5px 10px;
-            background-color: white;
-            border-radius: 5px;
+            height: 50px;
+            width: 50px;
+            background-color: $btn-color;
+            border-radius: 50%;
+            
+            a{
+                color: black;
+                display: grid;
+                place-items: center;
+                height: 100%;
+                width: 100%;
+            }
+            
+            &:nth-of-type(3) {
+                background-color: transparent;
+                
+                a{
+                    position: absolute;
+                    bottom: 30px;
+                    left: -10px;
+                    width: $big-button-width;
+                    height: $big-button-height;
+                    border-radius: 50%;
+                    background-color: $btn-color;
+                    filter:  drop-shadow(0px 0px 1px black);
+                }
+            }
         }
     }
 }
