--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,8 +1,19 @@
 <header>
-    <span><a href="/">Match App</a></span>
     <ul>
-        <li><a href="/restaurants">Restaurants</a></li>
-        <li><a href="/matches">Matches</a></li>
-        <li><a href="/register">Register</a></li>
+        <li>
+            <a href="/"><img src="/public/images/icons/home.svg" alt="Home icon"></a>
+        </li>
+        <li>
+            <a href="/restaurants"><img src="/public/images/icons/restaurants.svg" alt="Restaurant icon"></a>
+        </li>
+        <li>
+            <a href="/matches"><img src="/public/images/icons/matches.svg" alt="Matchcards icon"></a>
+        </li>
+        <li>
+            <a href="/messages"><img src="/public/images/icons/msg.svg" alt="Message icon"></a>
+        </li>
+        <li>
+            <a href="/profile"><img src="/public/images/icons/profile.svg" alt="Profile icon"></a>
+        </li>
     </ul>
 </header>
