added client side js

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,6 +6,7 @@
     <main>
         {{{body}}}
     </main>
-    {{> footer }}
+    {{!-- {{> footer }} --}}
+    <script src="/public/js/app.js"></script>
 </body>
 </html>
