--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -4,4 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | Restaurant Match App</title>
     <link rel="stylesheet" type="text/css" href="/public/css/app.css">
+    <link rel="stylesheet" href="https://use.typekit.net/bui5xab.css">
 </head>
