--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -1,9 +1,4 @@
-<article>
-    {{!-- <section style="width: 100px; overflow: hidden;">
-        <span style="width: 200px; background-color: red;">
-            hallo daar ik ben ymaro
-        </span>
-    </section> --}}
+<article class="restaurant-details">
     <section id="top" class="heading">
         <a href="/restaurants">
             <img src="/public/images/icons/back.svg" alt="Go Back Icon">
