use slug instead of id

--- a/views/restaurants/index.hbs
+++ b/views/restaurants/index.hbs
@@ -2,7 +2,7 @@
 <ul style="display: flex; flex-direction: column; gap: 20px;">
     {{#each restaurants}}
         <li style="display: flex; flex-direction: column; background-color: lightblue; padding: 10px 20px;">
-            <a href="/restaurants/{{ _id }}">{{ name }}</a>
+            <a href="/restaurants/{{ slug }}">{{ name }}</a>
         </li>
     {{/each}}
 </ul>
