--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -42,7 +42,7 @@
                     </li>
                  {{/times}}
             </ul>
-            <a href="{{ restaurant.id }}/reviews">
+            <a href="{{ restaurant.slug }}/reviews">
                 Bekijk reviews
             </a>
         </section>
