--- a/views/restaurants/reviews.hbs
+++ b/views/restaurants/reviews.hbs
@@ -1,1 +1,27 @@
+<article class="restaurant-reviews">
+    <section id="top" class="heading">
+        <a href="/restaurants">
+            <img src="/public/images/icons/back.svg" alt="Go Back Icon">
+        </a>
+        <h2>Alle reviews</h2>
+        <img class="save-restaurant {{ bool true 'saved' }}" 
+            {{#if true }}
+                src="/public/images/icons/heart-filled.svg"
+            {{else }}
+                src="/public/images/icons/heart-border.svg"
+            {{/if }}
+                data-saved="/public/images/icons/heart-filled.svg" 
+                data-unsaved="/public/images/icons/heart-border.svg" 
+                alt="Save Restaurant Icon"
+            />
+    </section>
+</article>
 <h1>reviews</h1>
+<ul>
+    {{#each reviews}}
+        <li>{{ remark }} - {{ rating }}</li>
+    {{/each}}
+</ul>
+<a href="rate">
+    rate {{ restaurant.name }}
+</a>
