--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -4,16 +4,25 @@ article {
     justify-content: space-between;
     gap: 20px;
 
-    #top{
+    &.restaurant-details #top, &.restaurant-reviews #top{
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
 
+
+        & >:nth-child(2){
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: clamp(1.4em, 7vmin, 1.5em);
+        }
+        
         a{
             display: grid;
             place-items: center;
             padding: 5px 10px;
-            width: 70px;
+            width: clamp(50px, 20vw, 70px);
             height: 35px;
             border-radius: .5em;
             background-color: $btn-color;
@@ -92,11 +101,9 @@ article {
                 
                 ul{
                     display: flex;
-                    gap: 5px;
                     overflow-x: hidden;
 
                     li{
-                        overflow: hidden;
                         img{
                             width: 35px;
                         }
