dynamically load avg star reviews in view

--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -35,7 +35,7 @@
             </ul>
         </section>
         <section>
-            <ul class="snap" style="width:{{stars 3.5 5}}px">
+            <ul class="snap" style="width:{{stars avg 5}}px">
                 {{#times 5}}
                     <li>
                         <img src="/public/images/icons/star.svg" alt="">
