updated background color

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-color: $section-color;
+    background-color: $app-body;
     padding-bottom: $footer-height + ($big-button-height * 0.75);
     font-family: 'Omnes-pro', Geneva, Tahoma, sans-serif;
 }
