--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -9,6 +9,7 @@ header{
     padding: 10px 20px;
     background-color: $header-color;
     box-shadow: 0px 0px 2px black; 
+    z-index: 99;
 
     ul {
         display: flex;
