--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -68,7 +68,7 @@ article {
                     }
                     
                     a{
-                        flex-shrink: 0;
+                        flex-shrink: 1;
                         display: grid;
                         place-items: center;
                         padding: 5px 10px;
@@ -119,8 +119,80 @@ article {
                     border-radius: $radius-standard;
                 }
             }
+            
         }
     }
+
+    &.restaurant-reviews #middle {
+    
+        > ul{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            > li {
+                position: relative;
+                padding: 1.5em 1.25em;
+                background-color: $app-grey;
+                border: 1px solid $app-grey;
+                
+                span{
+                    position: absolute;
+                    top: 5px;
+                    right: 5px;
+                }
+
+                section{
+                    display: grid;
+                    grid-template-columns: 1fr 3fr; 
+                    gap: 1.25em;
+                    
+                    div{
+                        display: flex;
+                        flex-direction: column;
+                        
+                        &:first-child{
+                            align-items: center;
+                            width: 60px;
+
+                            img{
+                                width: 100%;
+                                height: auto;
+                                border-radius: 50%;
+                            }
+                        }
+                        &:last-child{
+                            gap: .25em;
+                            ul {
+                                display: flex;
+                                flex-direction: row;
+                                overflow: hidden;
+
+                                img{
+                                    width: 25px;
+                                    height: auto;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        a{
+            position: sticky;
+            bottom: $footer-height + $big-button-height - 15px;
+            right: 20px;
+            left: 20px;
+            text-align: center;
+            border-radius: .5em;
+            padding: 0.5em 1em;
+            background-color: #FFBD2F;
+            color: #111;
+            font-weight: bold;
+            text-decoration: none;
+        }
+    }   
 
     #bottom{
         display: flex;
