--- a/views/restaurants/reviews.hbs
+++ b/views/restaurants/reviews.hbs
@@ -1,6 +1,6 @@
 <article class="restaurant-reviews">
     <section id="top" class="heading">
-        <a href="/restaurants">
+        <a href="/restaurants/{{ restaurant.slug }}">
             <img src="/public/images/icons/back.svg" alt="Go Back Icon">
         </a>
         <h2>Alle reviews</h2>
