--- a/views/restaurants/reviews.hbs
+++ b/views/restaurants/reviews.hbs
@@ -33,7 +33,7 @@
         <ul>
             {{#each reviews}}
                 <li>
-                    <span>{{ rating }}</span>
+                    <span>{{date created "DD-MM-YYYY"}}</span>
                     <section>
                         <div>
                             {{#if anon }}
