added empty state to reviews page

--- a/views/restaurants/reviews.hbs
+++ b/views/restaurants/reviews.hbs
@@ -58,7 +58,10 @@
                         </div>
                     </section>
                 </li>
+            {{ else }}
+            <p>Er zijn nog geen reviews...</p>
             {{/each}}
+
         </ul>
         <a href="rate">
             Geef {{ restaurant.name }} een rating
