added meta description and updated app name

--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -2,7 +2,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>{{ page.title }} | Restaurant Match App</title>
+    <title>{{ page.title }} | Matchtaurant</title>
+    <meta name="description" content="Bij Matchtaurant kan je nieuwe mensen leren kennen aan de hand van jouw interreses qua eten!">
     <link rel="stylesheet" type="text/css" href="/public/css/app.css">
     <link rel="stylesheet" href="https://use.typekit.net/bui5xab.css">
 </head>
