--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>{{ page.title }} | Matchtaurant</title>
     <meta name="description" content="Bij Matchtaurant kan je nieuwe mensen leren kennen aan de hand van jouw interreses qua eten!">
+    <link rel="icon" href="/public/images/icons/matches.svg">
     <link rel="stylesheet" type="text/css" href="/public/css/app.css">
     <link rel="stylesheet" href="https://use.typekit.net/bui5xab.css">
 </head>
