--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -132,7 +132,7 @@ article {
 
             > li {
                 position: relative;
-                padding: 1.5em 1.25em;
+                padding: 1.25em;
                 background-color: $app-grey;
                 border: 1px solid $app-grey;
                 
@@ -146,6 +146,7 @@ article {
                     display: grid;
                     grid-template-columns: 1fr 3fr; 
                     gap: 1.25em;
+                    margin-top: 20px;
                     
                     div{
                         display: flex;
