added location to model and load dynamically in view

--- a/views/restaurants/show.hbs
+++ b/views/restaurants/show.hbs
@@ -25,7 +25,7 @@
         <section>
             <div>
                 <h1>{{ restaurant.name }}</h1>
-                <a href="https://www.google.com/maps">
+                <a href="{{ restaurant.location }}" target="_blank">
                     <img src="/public/images/icons/route.svg" alt="">
                 </a>
             </div>
