check if vibrations are available

--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -215,6 +215,10 @@ article {
                         border: 2px solid $text-color;
                         background-color: $btn-color;
                     }
+
+                    &.n-a{
+                        display: none;
+                    }
                 }
             }
 
