kleine vib btn update

--- a/resources/sass/_restaurants.scss
+++ b/resources/sass/_restaurants.scss
@@ -210,6 +210,7 @@ article {
                     background-color: $btn-color-light;
                     width:max-content;
                     padding: .5em;
+                    border: 2px solid transparent;
                     
                     &.active {
                         border: 2px solid $text-color;
