updated empty state

--- a/views/restaurants/reviews.hbs
+++ b/views/restaurants/reviews.hbs
@@ -59,7 +59,7 @@
                     </section>
                 </li>
             {{ else }}
-            <p>Er zijn nog geen reviews...</p>
+            <p>Er zijn nog geen reviews... 👀. Wees de eerste!</p>
             {{/each}}
 
         </ul>
