moved rating form to views/restaurants/reviews

--- a/views/restaurants/reviews/new.hbs
+++ b/views/restaurants/reviews/new.hbs
@@ -3,7 +3,7 @@
         <a href="/restaurants/{{ restaurant.slug }}/reviews">
             <img src="/public/images/icons/back.svg" alt="Go Back Icon">
         </a>
-        <h2>Alle reviews</h2>
+        <h2>Nieuwe review</h2>
         <img class="save-restaurant {{ bool true 'saved' }}" 
             {{#if true }}
                 src="/public/images/icons/heart-filled.svg"
