--- a/views/restaurants/reviews/index.hbs
+++ b/views/restaurants/reviews/index.hbs
@@ -57,6 +57,11 @@
                             </p>
                         </div>
                     </section>
+                    {{#compare user._id}}
+                        <a href="/restaurants/{{ ../../restaurant.slug }}/reviews/{{ ../_id}}/edit">
+                            aanpassen
+                        </a>
+                    {{/compare}}
                 </li>
             {{ else }}
             <p>Er zijn nog geen reviews... 👀. Wees de eerste!</p>
