use label and id on input to check the checkbox

--- a/views/restaurants/reviews/edit.hbs
+++ b/views/restaurants/reviews/edit.hbs
@@ -45,7 +45,7 @@
             </label>
             <label class="toggle" for="anon">
                 Anoniem:
-                <input type="checkbox" name="anon" {{ bool review.anon 'checked' }}>
+                <input type="checkbox" name="anon" id="anon" {{ bool review.anon 'checked' }}>
                 <span class="slider"></span>
             </label>
             <label for="remark">
