--- a/views/restaurants/reviews/new.hbs
+++ b/views/restaurants/reviews/new.hbs
@@ -45,7 +45,7 @@
             </label>
             <label class="toggle" for="anon">
                 Anoniem:
-                <input type="checkbox" name="anon">
+                <input type="checkbox" name="anon" id="anon">
                 <span class="slider"></span>
             </label>
             <label for="remark">
